css/style.css
/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}
div {
  /*border: 1px solid black;*/
  margin: 0;
  padding: 0;
  line-height: 0;
}
#main-container{
  margin: auto 0;
  height: 160px;
  width: 100%;
  text-align: center;
  margin-top: 160px;
}
#board-container {
  width: 480px;
  height: 160px;
  display: inline-block;
}
.pit {
  display: inline-block;
  width: 80px;
  height: 80px;
  border: 1px solid #000;
  border-radius: 40px;
}
.mancala {
  display: inline-block;
  width: 80px;
  height: 160px;
  border: 1px solid #000;
  border-radius: 40px;
}

